# ecomtech-test

./: .gitignore  Dockerfile  Dockerfile-uv.dockerfile  README.md  docker-compose.yml  docker.env  justfile  main.py  pyproject.toml
migrations/: 20260316_01_7tEeb-create-table-marks.rollback.sql  20260316_01_7tEeb-create-table-marks.sql
src/: queries.py
src/models/: mark.py
src/queries/: queries.py
src/requests/: students.py  upload.py
