[project]
name = "ecom-tech"
version = "0.1.0"
description = "Test task for ecom.tech"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "psycopg2-binary>=2.9.11",
    "yoyo-migrations>=9.0.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
